--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section id="seccion">
             <div class="seccion1">
                 <img id="img-1" src="./img/imagen-1.jpg" alt="">
-                <h1>"El vestido perfecto es el que mejor refleja la personalidad de cada mujer."</h1>
+                <h1>"El vestido perfecto es el que mejor refleja tu personalidad."</h1>
             </div>
             <div class="seccion1">
                 <div class="info">
@@ -45,7 +45,7 @@
                         <h2>Viví tu momento.</h2>
                     </div>
                     <div>
-                        <p>Pedí tu cita y conoce todo lo que tenemos para esa ocasión especial.</p>
+                        <p>Pedí tu cita y viví tu experiencia.</p>
                     </div>
                     <div class="whatsapp">
                         <a class="logo-whatsapp" href="https://wa.me/1149483318"; target="_blank"><i class="fa-brands fa-whatsapp fa-2xl" style="color: #a7a393;"></i></a>
