--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,7 @@
             
             <div class="texto-contacto">
                 <h5 class="titulo-contacto" style="color:#A7727D;">Contanos que estás buscando...</h5>
-                <p>Podes contactarnos por WhatsApp al: 11-4948-3318</p>
+                <p>Contactarnos por WhatsApp al: 11-4948-3318</p>
                 <br>
                 <p>E-mail: truglio_kids@hotmail.com</p>
                 <br>
